Fixes callouts not rendering properly

--- a/app/styles/lib/asciidoc.css
+++ b/app/styles/lib/asciidoc.css
@@ -69,4 +69,8 @@
   .asciidoc-body .admonition-content > div:first-of-type {
     @apply text-sans-semi-md;
   }
+
+  .asciidoc-body pre .conum[data-value] {
+    @apply text-accent bg-accent-secondary-hover;
+  }
 }
