--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -14,6 +14,7 @@
 @import '@oxide/design-system/styles/dist/blue.css';
 @import '@oxide/design-system/components/dist/asciidoc.css';
 @import '@oxide/design-system/components/dist/button.css';
+@import '@oxide/design-system/components/dist/spinner.css';
 
 @import './lib/asciidoc.css';
 @import './lib/highlight.css';
