--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -130,3 +130,39 @@ input[type='radio']:focus:not(:focus-visible),
 input[type='checkbox']:focus:not(:focus-visible) {
   @apply outline-0 ring-0;
 }
+
+.typing-indicator {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 12px;
+  height: 12px;
+}
+
+.typing-indicator span {
+  display: block;
+  width: 3px;
+  height: 3px;
+  background-color: var(--content-accent);
+  border-radius: 50%;
+  animation: bounce 1.4s infinite both;
+}
+
+.typing-indicator span:nth-child(1) {
+  animation-delay: -0.32s;
+}
+
+.typing-indicator span:nth-child(2) {
+  animation-delay: -0.16s;
+}
+
+@keyframes bounce {
+  0%,
+  80%,
+  100% {
+    transform: translateY(0);
+  }
+  40% {
+    transform: translateY(-4px);
+  }
+}
