--- a/app/styles/lib/asciidoc.css
+++ b/app/styles/lib/asciidoc.css
@@ -6,77 +6,175 @@
  * Copyright Oxide Computer Company
  */
 
-@layer components {
+@utility asciidoc-body {
   /* Removes top spacing from header if it is the first element */
-  .asciidoc-body #content > .sect1:first-of-type > h1:nth-child(2),
-  .asciidoc-body #content > .sect1:first-of-type > h2:nth-child(2),
-  .asciidoc-body #content > .sect1:first-of-type > h3:nth-child(2),
-  .asciidoc-body #content > .sect1:first-of-type > h4:nth-child(2),
-  .asciidoc-body #content > .sect1:first-of-type > h5:nth-child(2) {
+  & #content > .sect1:first-of-type > h1:nth-child(2) {
+    @apply mt-0;
+  }
+  & #content > .sect1:first-of-type > h2:nth-child(2) {
+    @apply mt-0;
+  }
+  & #content > .sect1:first-of-type > h3:nth-child(2) {
+    @apply mt-0;
+  }
+  & #content > .sect1:first-of-type > h4:nth-child(2) {
+    @apply mt-0;
+  }
+  & #content > .sect1:first-of-type > h5:nth-child(2) {
     @apply mt-0;
   }
 
-  .asciidoc-body h2[data-sectnum] a,
-  .asciidoc-body h1[data-sectnum] a,
-  .asciidoc-body h3[data-sectnum] a,
-  .asciidoc-body h4[data-sectnum] a,
-  .asciidoc-body h5[data-sectnum] a {
+  & h2[data-sectnum] a {
     @apply inline;
   }
 
-  .asciidoc-body h1[data-sectnum]:before,
-  .asciidoc-body h2[data-sectnum]:before,
-  .asciidoc-body h3[data-sectnum]:before,
-  .asciidoc-body h4[data-sectnum]:before,
-  .asciidoc-body h5[data-sectnum]:before {
+  & h1[data-sectnum] a {
+    @apply inline;
+  }
+
+  & h3[data-sectnum] a {
+    @apply inline;
+  }
+
+  & h4[data-sectnum] a {
+    @apply inline;
+  }
+
+  & h5[data-sectnum] a {
+    @apply inline;
+  }
+
+  & h1[data-sectnum]:before {
     @apply pointer-events-none top-[6px] mr-2 inline-block text-tertiary 800:absolute 800:-left-[72px] 800:mr-0 800:w-[60px] 800:text-right 800:text-sans-lg;
     content: attr(data-sectnum);
   }
 
-  .asciidoc-body h3[data-sectnum]:before {
+  & h2[data-sectnum]:before {
+    @apply pointer-events-none top-[6px] mr-2 inline-block text-tertiary 800:absolute 800:-left-[72px] 800:mr-0 800:w-[60px] 800:text-right 800:text-sans-lg;
+    content: attr(data-sectnum);
+  }
+
+  & h3[data-sectnum]:before {
+    @apply pointer-events-none top-[6px] mr-2 inline-block text-tertiary 800:absolute 800:-left-[72px] 800:mr-0 800:w-[60px] 800:text-right 800:text-sans-lg;
+    content: attr(data-sectnum);
+  }
+
+  & h4[data-sectnum]:before {
+    @apply pointer-events-none top-[6px] mr-2 inline-block text-tertiary 800:absolute 800:-left-[72px] 800:mr-0 800:w-[60px] 800:text-right 800:text-sans-lg;
+    content: attr(data-sectnum);
+  }
+
+  & h5[data-sectnum]:before {
+    @apply pointer-events-none top-[6px] mr-2 inline-block text-tertiary 800:absolute 800:-left-[72px] 800:mr-0 800:w-[60px] 800:text-right 800:text-sans-lg;
+    content: attr(data-sectnum);
+  }
+
+  & h3[data-sectnum]:before {
     @apply top-[2px];
   }
 
-  .asciidoc-body h4[data-sectnum]:before,
-  .asciidoc-body h5[data-sectnum]:before {
+  & h4[data-sectnum]:before {
     @apply top-0;
   }
 
-  .asciidoc-body h1[data-sectnum] a:after,
-  .asciidoc-body h2[data-sectnum] a:after,
-  .asciidoc-body h3[data-sectnum] a:after,
-  .asciidoc-body h4[data-sectnum] a:after,
-  .asciidoc-body h5[data-sectnum] a:after {
+  & h5[data-sectnum]:before {
+    @apply top-0;
+  }
+
+  & h1[data-sectnum] a:after {
     @apply hidden;
   }
 
-  .asciidoc-body .table-wrapper caption a:hover:after {
+  & h2[data-sectnum] a:after {
+    @apply hidden;
+  }
+
+  & h3[data-sectnum] a:after {
+    @apply hidden;
+  }
+
+  & h4[data-sectnum] a:after {
+    @apply hidden;
+  }
+
+  & h5[data-sectnum] a:after {
+    @apply hidden;
+  }
+
+  & .table-wrapper caption a:hover:after {
     @apply align-[-2px];
   }
 
-  .asciidoc-body img {
+  & img {
     @apply bg-inverse-primary;
   }
 
-  .asciidoc-body .transparent-dark img {
+  & .transparent-dark img {
     @apply bg-raise;
   }
 
-  .asciidoc-body span img {
+  & span img {
     @apply bg-transparent;
   }
 
-  .asciidoc-body .admonition-content > div:first-of-type {
+  & .admonition-content > div:first-of-type {
     @apply text-sans-semi-md;
   }
 
-  .asciidoc-body pre .conum[data-value] {
+  & pre .conum[data-value] {
     @apply text-accent bg-accent-secondary-hover;
   }
 
-  .asciidoc-body svg p {
+  & svg p {
     font-size: initial;
     letter-spacing: initial;
     font-weight: initial;
+  }
+}
+
+@utility sect1 {
+  /* Removes top spacing from header if it is the first element */
+  .asciidoc-body #content > &:first-of-type > h1:nth-child(2) {
+    @apply mt-0;
+  }
+
+  .asciidoc-body #content > &:first-of-type > h2:nth-child(2) {
+    @apply mt-0;
+  }
+
+  .asciidoc-body #content > &:first-of-type > h3:nth-child(2) {
+    @apply mt-0;
+  }
+
+  .asciidoc-body #content > &:first-of-type > h4:nth-child(2) {
+    @apply mt-0;
+  }
+
+  .asciidoc-body #content > &:first-of-type > h5:nth-child(2) {
+    @apply mt-0;
+  }
+}
+
+@utility table-wrapper {
+  .asciidoc-body & caption a:hover:after {
+    @apply align-[-2px];
+  }
+}
+
+@utility transparent-dark {
+  .asciidoc-body & img {
+    @apply bg-raise;
+  }
+}
+
+@utility admonition-content {
+  .asciidoc-body & > div:first-of-type {
+    @apply text-sans-semi-md;
+  }
+}
+
+@utility conum {
+  .asciidoc-body pre &[data-value] {
+    @apply text-accent bg-accent-secondary-hover;
   }
 }
