--- a/app/styles/lib/github-markdown.css
+++ b/app/styles/lib/github-markdown.css
@@ -8,7 +8,7 @@
 
 .github-markdown.asciidoc-body {
   & p {
-    @apply mb-2 text-sans-md;
+    @apply text-sans-md mb-2;
   }
 
   & *:last-child {
@@ -17,11 +17,11 @@
 
   & ul,
   & ol {
-    @apply normal-case text-sans-md text-default;
+    @apply text-sans-md text-default normal-case;
   }
 
   & blockquote {
-    @apply mb-4 mt-4 border-l pl-4 border-default;
+    @apply border-default mt-4 mb-4 border-l pl-4;
 
     & p {
       @apply text-tertiary;
@@ -29,12 +29,12 @@
   }
 
   & ins {
-    @apply rounded-sm text-accent;
+    @apply text-accent rounded-xs;
     background-color: rgba(var(--base-green-800-rgb), 0.2);
   }
 
   & del {
-    @apply rounded-sm text-destructive;
+    @apply text-destructive rounded-xs;
     background-color: rgba(var(--base-red-800-rgb), 0.2);
     text-decoration: line-through;
   }
