--- a/app/styles/index.css
+++ b/app/styles/index.css
@@ -159,3 +159,70 @@ table.inline-table {
     }
   }
 }
+
+.dialog {
+  opacity: 0;
+  transition-property: opacity, transform;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 100ms;
+  transform: translate3d(50%, 0px, 0px);
+}
+
+.dialog[data-enter] {
+  opacity: 1;
+  transition-duration: 100ms;
+  transform: translate3d(0%, 0px, 0px);
+}
+
+.dialog[data-leave] {
+  transition-duration: 50ms;
+}
+
+.spinner {
+  --radius: 4;
+  --PI: 3.14159265358979;
+  --circumference: calc(var(--PI) * var(--radius) * 2px);
+  animation: rotate 5s linear infinite;
+}
+
+.spinner .path {
+  stroke-dasharray: var(--circumference);
+  transform-origin: center;
+  animation: dash 4s ease-in-out infinite;
+  stroke: var(--content-accent);
+}
+
+@media (prefers-reduced-motion) {
+  .spinner {
+    animation: rotate 6s linear infinite;
+  }
+
+  .spinner .path {
+    animation: none;
+    stroke-dasharray: 20;
+    stroke-dashoffset: 100;
+  }
+
+  .spinner-lg .path {
+    stroke-dasharray: 50;
+  }
+}
+
+.spinner .bg {
+  stroke: var(--content-default);
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes dash {
+  from {
+    stroke-dashoffset: var(--circumference);
+  }
+  to {
+    stroke-dashoffset: calc(var(--circumference) * -1);
+  }
+}
